@@ -1,3 +1,5 @@
+2016-03-03 Nicolas Normand <nnormand@justcodeit.org>
+	* cppmt::Opts: can set a suffix message for generated help.
 2014-07-11 Nicolas Normand <nnormand@justcodeit.org>
 	* Version 0.2.0
 	* cppmt::Sqlite: Forbid copy constructor and operator= for class Sqlite.
